--- a/task_manager/client/public/index.html
+++ b/task_manager/client/public/index.html
@@ -9,27 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class = "logo">
-            <i class = "fas fa-tasks"></i>
-            <h1>Taskboard</h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href = "dashboard.html">Dashboard</a></li>
-                <li><a href = "boards.html">My Boards</a></li>
-                <li><a href = "tasks.html">Tasks</a></li>
-            </ul>
-        </nav>
-        <div class = "user-menu">
-            <div class = "user-avatar">filled by JS</div>
-            <div class = "dropdown">
-                <a href = "profile.html">Profile</a>
-                <a href = "settings.html">Settings</a>
-                <a href = "#" id = "logout">Logout</a>
-            </div>
-        </div>
-    </header>
+    <div id = "root">
+
+    </div>
     <main>
         <div class = "board-header">
             <h2>Project Development</h2>
@@ -46,114 +28,8 @@
                         <span class = "task-count">Task Count: 3</span>
                     </div>
                     <div class = "task-list">
-                        <div class = "task">
-                            <div class = "task-header">
-                                <span class = "priority high">High Priority</span>
-                                <div class = "task-actions">
-                                    <i class = "fas fa-ellipsis-v"></i>
-                                </div>
-                            </div>
-                            <h4>Create design mockups</h4>
-                            <p>Create initial UI design for the dashboard</p>
-                            <div class = "task-footer">
-                                <span class = "due-date">Due: Apr 15</span>
-                                <div class = "assigned-to">assigned to jd salinger</div>
-                            </div>
-                        </div>
-
-                        <div class = "task">
-                            <div class = "task-header">
-                                <span class = "priority medium">Medium Priority</span>
-                                <div class = "task-actions">
-                                    <i class = "fas fa-ellipsis-v"></i>
-                                </div>
-                            </div>
-                            <h4>Set up database structure</h4>
-                            <p>Create MongoDB schemas for users and tasks</p>
-                            <div class = "task-footer">
-                                <span class = "due-date">Due: Apr 18</span>
-                                <div class = "assigned-to">assigned to mary shelley</div>
-                            </div>
-                        </div>
-                    </div>
                     <button class = "add-task-btn"><i class = "fas fa-plus"></i> Add Task</button>
-                </div>
-
-
-                <!-- In Progress Column-->
-                <div class = "column">
-                    <div class = "column-header">
-                        <h3>In Progress</h3>
-                        <span class = "task-count">Task Count: 2</span>
-                    </div>
-                    <div class = "task-list">
-                        <div class = "task">
-                            <div class = "task-header">
-                                <span class = "priority high">High Priority</span>
-                                <div class = "task-actions">
-                                    <i class = "fas fa-ellipsis-v"></i>
-                                </div>
-                            </div>
-                            <h4>Setup authentication system</h4>
-                            <p>Implement JWT authentication</p>
-                            <div class = "task-footer">
-                                <span class = "due-date">Due: Apr 10</span>
-                                <div class = "assigned-to">The dragon tyrant</div>
-                            </div>
-                        </div>
-                    </div>
-                    <button class = "add-task-btn"><i class = "fas fa-plus"></i> Add Task</button>
-                </div>
-
-                <!--Review Column-->
-                <div class = "column">
-                    <div class="column-header">
-                        <h3>Review</h3>
-                        <span class="task-count">Task Count: 1</span>
-                    </div>
-                    <div class="task-list">
-                        <div class="task">
-                            <div class="task-header">
-                                <span class="priority medium">Medium</span>
-                                <div class="task-actions">
-                                    <i class="fas fa-ellipsis-v"></i>
-                                </div>
-                            </div>
-                            <h4>Create landing page</h4>
-                            <p>Design and implement the landing page</p>
-                            <div class="task-footer">
-                                <span class="due-date">Due: Apr 8</span>
-                                <div class="assigned-to">TK</div>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="add-task-btn"><i class="fas fa-plus"></i> Add Task</button>
-                </div>
-                
-                <!--Done Column-->
-                <div class="column">
-                    <div class="column-header">
-                        <h3>Done</h3>
-                        <span class="task-count">2</span>
-                    </div>
-                    <div class="task-list">
-                        <div class="task completed">
-                            <div class="task-header">
-                                <span class="priority low">Low</span>
-                                <div class="task-actions">
-                                    <i class="fas fa-ellipsis-v"></i>
-                                </div>
-                            </div>
-                            <h4>Project setup</h4>
-                            <p>Initialize repository and setup project structure</p>
-                            <div class="task-footer">
-                                <span class="due-date">Completed: Apr 2</span>
-                                <div class="assigned-to">JS</div>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="add-task-btn"><i class="fas fa-plus"></i> Add Task</button>
-                </div>   
+                </div> 
             </div>
         </div>
     </main>
